--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Parcial_Moviles"
-        tools:targetApi="31">
+        tools:targetApi="31"
+        android:name=".RestaurantReviewerApplication"
+
+        >
         <activity
             android:name=".MainActivity"
             android:exported="true"
